--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,3 +35,11 @@ body{
     background-color: #a3d2ca;
     color: #056676;
 }
+
+span{
+    color: #cf1b1b;
+    font-weight: 600;
+    font-family: monospace;
+    font-size: 16px;
+    background-color: #a3d2ca
+}
